--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
   </h2>
   <h2>
   	<span class="arr">&#187;</span> 
+  	<a href="http://localhost:3000" target="_blank" title="Ruby on Rails :3000">Rails :3000</a>
+  </h2>
+  <h2>
+  	<span class="arr">&#187;</span> 
   	<a href="http://localhost:8080" target="_blank" title="Secondary :8080">Secondary :8080</a>
   </h2>
   <h2>
